# edu-sim-hub

./: .eslintrc.js  .gitignore  CMakeLists.txt  README.md  WASM-Simulator.cpp  asset-manifest.json  build.sh  clear.sh  configure.sh  craco.config.js  docs.sh  index.html  package-lock.json  package.json  tsconfig.json
docs/: index.html  modules.html
docs/Simulator/: CMakeLists.txt  Doxyfile.in
latex/thesis/: projekt.aux  projekt.blg  projekt.fdb_latexmk  projekt.fls  projekt.ptc  projekt.toc
src/: App.module.css  App.tsx  AppStyle.module.scss  CMakeLists.txt  Utils.tsx  index.css  index.tsx
src/Components/: CanvasComponentFactory.tsx  Icons.tsx  ObjectGUIComponentFactory.tsx
src/Components/Editor/: Canvas.module.css  Canvas.tsx  CanvasElementWrapper.tsx  EditMenu.tsx  Editor.module.css  Editor.tsx  EditorItem.tsx  EditorMenu.module.css  EditorMenu.tsx  MovableSVGGroupElement.tsx
src/Components/MainComponents/: PetriNets.tsx  TopMenu.module.css
src/Components/PetriNets/: PetriNetsComponentFactory.tsx  PlaceEdit.tsx  PlaceSVG.tsx  PlaceSVGComponent.tsx  TransitionEdit.tsx  TransitionSVG.tsx  TransitionSVGComponent.tsx
src/Components/UtilComponents/: Menu.tsx
src/Components/Utilities/: Errors.ts  UtilMethods.tsx  UtilMethodsAndTypes.tsx
src/Editor/Adapters/: ContBlocksAdapter.tsx  PetriNetsSimulatorAdapter.tsx  index.ts
src/Editor/Components/: Canvas.tsx  CanvasSVG.tsx  EditMenu.tsx  EditWindow.tsx  Icons.tsx  ObjectGUIComponentFactory.tsx  StatisticsWindow.tsx  index.ts
src/Editor/Feature/: CanvasContextSlice.tsx  ExamplesSlice.tsx  PointEdgeSelectionSlice.tsx  SimObjectManagementSlice.tsx  StatisticsSlice.tsx  ZoomSlice.tsx  index.ts
src/Editor/Model/: EditorObject.tsx  SimObject.tsx  SimulationParams.ts  index.ts
src/Editor/Store/: Store.tsx
src/Editor/Styles/: CanvasStyle.module.scss  ContBlockStyles.module.scss  EditMenu.module.scss  EditWindow.module.scss  EditorStyle.module.scss  Mixins.scss  ModalWindow.module.scss  PetriNetsStyle.module.scss  Test.module.scss  TopMenuStyle.module.scss  Variables.scss
src/Feature/: CanvasContextSlice.tsx  CanvasElementManagementSlice.tsx  ElementSelectionSlice.tsx  PointConnectionAndSelectionSlice.tsx  PointConnectionSlice.tsx  PointEdgeSelectionSlice.tsx  SimObjectManagementSlice.tsx  ZoomSlice.tsx
src/Model/: ComponentFactory.tsx  SimObject.tsx
src/Model/PetriNets/: Place.tsx  (+2 more)
src/Simulator/: CMakeLists.txt  SimEngine.cpp  SimEngine.hpp  SimObject.cpp  SimObject.hpp  Simulator.cpp  a.out.js  a.out.wasm  main.cpp  test.sh
src/Simulator/ContinousBlocks/: Add.cpp  Add.hpp  CMakeLists.txt  Constant.cpp  Constant.hpp  ContBlock.cpp  ContBlock.hpp  ContBlockEngine.cpp  ContBlockEngine.hpp  ContBlockStatistics.hpp  Div.cpp  Div.hpp  Divide.cpp  Divide.hpp  Gain.cpp  Gain.hpp  Integrator.cpp  Integrator.hpp  Mul.cpp  Mul.hpp  Sub.cpp  Sub.hpp  Sum.cpp  Sum.hpp  Time.cpp  Time.hpp
src/Simulator/ContinousBlocks/IntegrationMethods/: CMakeLists.txt  Euler.cpp  Euler.hpp  IntegrationMethod.hpp
src/Simulator/ContinousSimulation/: CMakeLists.txt  ContinousSimEngine.cpp  ContinousSimEngine.hpp  ContinousSimObject.hpp  ContinousSimulator.cpp  ContinousSimulator.hpp
src/Simulator/DiscreteSimulation/: CMakeLists.txt  Calendar.cpp  Calendar.hpp  DiscreteEngine.cpp  DiscreteEngine.hpp  DiscreteSimObject.hpp  DiscreteSimulationEngine.cpp  DiscreteSimulationEngine.hpp  Event.cpp  Event.hpp  Generator.cpp  Generator.hpp  Global.cpp  Global.hpp
src/Simulator/Generator/: CMakeLists.txt  Generator.cpp  Generator.hpp
src/Simulator/IntegrationMethods/: CMakeLists.txt  IntegrationMethods.cpp  IntegrationMethods.hpp
src/Simulator/PetriNets/: Arc.cpp  Arc.hpp  Arch.cpp  Arch.hpp  CMakeLists.txt  Edge.cpp  Edge.hpp  PetriNetsEngine.cpp  PetriNetsEngine.hpp  PetriNetsObject.cpp  PetriNetsObject.hpp  PetriNetsStatistics.hpp  Place.cpp  Place.hpp  Token.cpp  Token.hpp  Transition.cpp  Transition.hpp
src/Simulator/UnitTests/: ArchTest.cpp  CMakeLists.txt  PlaceTest.cpp  SimulationsTest.cpp  TransitionTest.cpp
src/Simulator/UnitTests/ContBlockTests/: CMakeLists.txt  ContBlockTests.cpp  EulerTest.cpp  SimpleSimTests.cpp
src/Simulator/UnitTests/PetriNetsTests/: ArcTest.cpp  ArchTest.cpp  CMakeLists.txt  PlaceTest.cpp  SimulationsTest.cpp  TransitionTest.cpp
src/Simulator/test/: CMakeLists.txt  hello_test.cpp
src/Store/: Hooks.tsx  Store.tsx
src/Styles/: AppStyle.module.less  Mixins.scss  TopMenuStyle.module.scss  Variables.scss
static/css/: main.08b7399c.chunk.css  main.08b7399c.chunk.css.map  main.3a31f447.chunk.css  main.3a31f447.chunk.css.map  main.3cbc9ff8.chunk.css  main.3cbc9ff8.chunk.css.map  main.48fd50ca.chunk.css  main.48fd50ca.chunk.css.map  main.9e914d62.chunk.css  main.9e914d62.chunk.css.map  main.f60b36cf.chunk.css  main.f60b36cf.chunk.css.map
static/js/: 2.2059b5a9.chunk.js  2.2059b5a9.chunk.js.map  2.42883368.chunk.js  2.42883368.chunk.js.map  2.8f63848d.chunk.js  2.8f63848d.chunk.js.map  2.c65c990b.chunk.js  2.c65c990b.chunk.js.map  2.fc34136f.chunk.js  2.fc34136f.chunk.js.map  3.4eeb6ed5.chunk.js  3.4eeb6ed5.chunk.js.map  main.3f2ca000.chunk.js  main.3f2ca000.chunk.js.map  main.4a65b997.chunk.js  main.4a65b997.chunk.js.map  main.52183cc4.chunk.js  main.52183cc4.chunk.js.map  main.580acf31.chunk.js  main.580acf31.chunk.js.map  main.6acdc7b5.chunk.js  main.6acdc7b5.chunk.js.map  main.6c61db7c.chunk.js  main.6c61db7c.chunk.js.map  main.6f229fc5.chunk.js  main.6f229fc5.chunk.js.map  main.7060b702.chunk.js  main.7060b702.chunk.js.map  main.777321f7.chunk.js  main.777321f7.chunk.js.map  main.8837c243.chunk.js  main.8837c243.chunk.js.map  main.8d0f6364.chunk.js  main.8d0f6364.chunk.js.map  main.ba975f96.chunk.js  main.ba975f96.chunk.js.map  main.d3d55ec6.chunk.js  main.d3d55ec6.chunk.js.map  runtime-main.92c40083.js  runtime-main.92c40083.js.map
wasm-build/: ALL_BUILD.vcxproj  ALL_BUILD.vcxproj.filters  CMakeCache.txt  WASM-Simulator.sln  WASM-Simulator.vcxproj  WASM-Simulator.vcxproj.filters  ZERO_CHECK.vcxproj  ZERO_CHECK.vcxproj.filters  cmake_install.cmake
wasm-build/src/: cmake_install.cmake
(+159 files in other folders)
